# CrossLink-FG

./: CMakeLists.txt  GOD_TIER_SUCCESS.md  PROJECT_COMPLETION_SUMMARY.md  README.md  verify_build.bat
docs/: API_REFERENCE.md  DEVELOPER_GUIDE.md  INSTALLATION.md  TROUBLESHOOTING.md  USER_GUIDE.md
include/: DX12Renderer.h  FrameGenManager.h  NvidiaOpticalFlow.h  OpenCLProcessor.h  SharedMemoryBridge.h  Simulator.h  frame_capture.h  frame_processor.h  hooks.h  imgui_manager.h
installer/: CrossLink-FG.wxs  EULA.rtf  Product.wxs  build_installer.bat
kernels/: frame_interpolation.cl
src/: DX12Renderer.cpp  FrameGenManager.cpp  NvidiaOpticalFlow.cpp  OpenCLProcessor.cpp  SharedMemoryBridge.cpp  Simulator.cpp  ai_pipeline.cpp  ai_pipeline.h  dllmain.cpp  dllmain_overlay.cpp  dx12_hooks.cpp  frame_capture.cpp  frame_processor.cpp  hooks.cpp  hooks_clean.cpp  hooks_overlay.cpp  hooks_simple.cpp  imgui_manager.cpp  loader.cpp  main.cpp  neural_interpolator.cpp  neural_interpolator.h  opencl_amd_processor.cpp  overlay_window.cpp  overlay_window.h  proxy.cpp  screen_grabber.cpp  screen_grabber.h  simple_overlay.cpp  universal_main.cpp
stubs/: nvOpticalFlow.h
stubs/CL/: cl.h
